# openadapt-consilium

./: .gitignore  LICENSE  README.md  pyproject.toml
consilium/: __init__.py  __main__.py  core.py  cost.py  providers.py  sdk.py
src/consilium/: __init__.py  __main__.py  core.py  cost.py  model_registry.py  providers.py  sdk.py
tests/: conftest.py  test_council.py  test_model_discovery_live.py  test_model_registry.py
