[project]
name = "consilium"
version = "0.1.0"
description = "LLM Council -- query multiple AI models, cross-review, and synthesize the best answer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Richard Abrich", email = "richard@openadapt.ai"},
]
keywords = ["llm", "ai", "council", "multi-model", "consensus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0",
    "anthropic>=0.30",
]

[project.optional-dependencies]
google = ["google-generativeai>=0.5"]
all = ["google-generativeai>=0.5"]
dev = ["pytest>=7.0", "pytest-mock"]

[project.scripts]
consilium = "consilium.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
